crates/zizmor/tests/integration/snapshots/integration__snapshot__insecure_commands-4.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"insecure-commands/issue-839-repro.yml\")).args([\"--persona=auditor\"]).run()?"
---
error[insecure-commands]: execution of insecure workflow commands is enabled
  --> @@INPUT@@:15:5
   |
15 | /     env:
16 | |       ACTIONS_ALLOW_UNSECURE_COMMANDS: "true"
   | |_____________________________________________^ insecure commands enabled here
   |
   = note: audit confidence → High
   = note: this finding has an auto-fix

error[insecure-commands]: execution of insecure workflow commands is enabled
  --> @@INPUT@@:30:9
   |
30 |         env: ${{ matrix.env }}
   |         ^^^^^^^^^^^^^^^^^^^^^^ non-static environment may contain ACTIONS_ALLOW_UNSECURE_COMMANDS
   |
   = note: audit confidence → Low

2 findings (1 fixable): 0 informational, 0 low, 0 medium, 2 high
